# python_for_ai_engineers

./: .gitignore  README.md  pyproject.toml
modulo_1/: aula_1.py  aula_2.py  aula_3.py  aula_4.py  main.py
modulo_2/: aula_1.py  aula_2.py  aula_3.py  aula_4.py  aula_5.py  aula_5.txt  conversation_history.txt  main.py
modulo_3/: aula_1.py  aula_2.py  aula_3.py  calculadora.py  log.txt  main.py
modulo_4/: aula_1.py  aula_2.py  aula_3.py  main.py
modulo_4/models/: base.py  llama.py  openai.py
modulo_5/: aula_1.py  aula_2.py  main.py  vector_store.py
modulo_6/: aula_1.py  aula_2.py  aula_3.py  etl.py  main.py  messages.csv  messages.jsonl  support_logs_dirty.csv  training_data.jsonl
modulo_7/: aula_1.py  aula_2.py  main.py
modulo_7/models/: dashboard_plotter.py  dataset_reader.py  token_stats.py
modulo_8/: aula_2.py  aula_3.py  aula_4.py  aula_5.py  cli_assistant.py  conversation_history.txt  main.py  tools.py
